<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Actividades.MainActivity">


    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light"
    />
    <TextView
            android:layout_width="285dp"
            android:layout_height="60dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            android:textSize="20sp" android:textColor="@color/colorPrimary" android:text="@string/Bienvenido"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:id="@+id/textView"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bNoticias" android:text="@string/Noticias" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="68dp" android:layout_marginStart="68dp"
            app:layout_constraintEnd_toStartOf="@+id/bEmpresas" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
    />
    <Button
            android:text="@string/Empresas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bEmpresas"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
    />
    <ImageView
            android:layout_width="139dp"
            android:layout_height="77dp" app:srcCompat="@drawable/icono_cicla"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.502" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <Button
            android:text="Info. General"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bGeneral" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="71dp"
            tools:layout_editor_absoluteX="0dp" android:id="@+id/button2"/>
    <Button
            android:text="Usuarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bUsuarios" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/bNoticias" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bGrupos" android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" android:layout_marginLeft="68dp"
            android:layout_marginStart="68dp"/>
    <Button
            android:text="Grupos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bGrupos" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/bEmpresas" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="68dp" android:layout_marginRight="68dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>