<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Actividades.DetalleEmpresaActivity">
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="wrap_content">

            <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTelefono"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp"
                    android:hint="2673924"
                    android:singleLine="true"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginTop="8dp"
                    app:layout_constraintHorizontal_bias="0.679" android:inputType="numberDecimal"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView16"
                    android:text="@string/Telefono"
                    app:layout_constraintTop_toBottomOf="@+id/etEmail"
                    android:layout_marginTop="20dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"/>
            <TextView
                    android:text="@string/Coordenadas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/etInstagram"
                    android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"/>
            <TextView
                    android:layout_width="126dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvLatitud"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:hint="Latitud"
                    android:singleLine="true"
                    android:inputType="text"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/etLongitud" android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.211"
                    app:layout_constraintVertical_bias="1.0"/>
            <TextView
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/etLongitud"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:hint="Longitud"
                    android:singleLine="true"
                    android:inputType="text"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginTop="8dp"
                    android:layout_marginEnd="72dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="72dp" app:layout_constraintVertical_bias="1.0"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/etDireccion"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:hint="Mz C Casa 23 Urb San Franciso"
                    android:singleLine="true"
                    android:inputType="text"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/Direccion"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintHorizontal_bias="0.501" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/etCiudad"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/tvHorario"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    android:layout_marginEnd="9dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="9dp" app:layout_constraintStart_toEndOf="@+id/etEmail"
                    android:layout_marginStart="8dp" android:layout_marginLeft="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintHorizontal_bias="0.51"
                    android:textAppearance="@style/TextAppearance.AppCompat" android:hint="De 6 a 6"
                    android:textSize="12sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView13"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:text="Horario"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.72"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etDescripcion"/>
            <TextView
                    android:layout_height="wrap_content"
                    android:id="@+id/etInstagram"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:hint="www.facebook.com"
                    android:singleLine="true"
                    android:inputType="text"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    app:layout_constraintEnd_toStartOf="@+id/etFb"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp" android:layout_width="0dp"/>
            <TextView
                    android:text="@string/FB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/etCelular"
                    app:layout_constraintEnd_toStartOf="@+id/textView5" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="15dp"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/etFb"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:hint="bicibague"
                    android:singleLine="true"
                    android:layout_marginEnd="110dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="110dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    android:inputType="text"
                    android:layout_marginTop="8dp"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/Correo"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etDescripcion"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/Celular"
                    android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/etEmail"
                    app:layout_constraintEnd_toStartOf="@+id/textView5" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"/>
            <TextView
                    android:id="@+id/etDescripcion"
                    android:layout_width="355dp"
                    android:layout_height="55dp"
                    android:text="BICICLETAS, MANTENIMIENTOS, REPUESTOS, UNIFORMES, COMIDAS, LUCES, ZAPATILLAS, FABULOSO,  "
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
                    android:layout_marginLeft="12dp" android:layout_marginStart="12dp" android:layout_marginEnd="12dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="12dp"/>
            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:elevation="4dp"
                    android:background="?attr/colorPrimary"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:popupTheme="@style/Theme.AppCompat.Light"
            />

            <ImageView
                    android:layout_width="47dp"
                    android:layout_height="47dp" app:srcCompat="@drawable/logobicibague"
                    android:id="@+id/ivIcono"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/ivPortada"/>
            <ImageView
                    android:layout_width="356dp"
                    android:layout_height="193dp"
                    app:srcCompat="@drawable/bicibague"
                    android:id="@+id/ivPortada"
                    android:adjustViewBounds="true"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="16dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/etNombre"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:hint="Nombre Empresa"
                    android:inputType="textPersonName" android:singleLine="true" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                    android:textSize="20sp" app:layout_constraintHorizontal_bias="0.514"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/ivIcono"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/etCiudad"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/etNombre"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="9dp"
                    android:layout_marginRight="9dp" android:hint="Ciudad" android:inputType="text"
                    android:singleLine="true" app:layout_constraintHorizontal_bias="0.501" android:textSize="12sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/Descripcion"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/etDireccion"/>
            <TextView
                    android:layout_width="203dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/etEmail"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:hint="jccd1996@hotmail.com"
                    android:inputType="textEmailAddress" android:singleLine="true"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"/>
            <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/etCelular"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp"
                    android:hint="3209296233"
                    android:singleLine="true"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginTop="8dp"
                    app:layout_constraintHorizontal_bias="0.0" android:inputType="numberDecimal"/>
            <TextView
                    android:text="@string/Instagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="112dp" android:layout_marginRight="112dp"
                    android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/etCelular"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>